# shap_ensemble_pruning

./: .gitignore  LICENSE.md  README.md  README_shap_ensemble.md  main.py  pyproject.toml
config/: config.yaml  ensemble_config.yaml
notebooks/: visualise_SHAP.ipynb
src/ensemble_trainer/: ensemble_trainer.py  hyperparameter_mining.py
src/ensemble_trainer/old_codes/: CIFAR10_CNN_101-120_RUN.py  CIFAR10_CNN_121-150_RUN.py  CIFAR10_CNN_151-200_RUN.py  CIFAR10_CNN_21-30_RUN.py  CIFAR10_CNN_251-300_RUN.py  CIFAR10_CNN_31-50_RUN.py  CIFAR10_CNN_51-100_RUN.py  CIFAR_CNN_1-20_RUN.py  CIFAR_CNN_201-250_RUN.py
src/flow/: training_flow.py
src/image_extractor/: image_feature_extractor.py
src/logger/: env_example  logger.py
src/pruning/: sip_pruning.py
src/shap_ops/: masker.py
src/trainer/: CNN.py  trainer.py
